Bug 797120 - GLContext::CanUploadNonPowerOfTwo() should not call AddBoolVarCache() when off the main thread. r=bjacob